deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spleeter-server
  namespace: dev
  
  labels:
    app.kubernetes.io/instance: spleeter-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: spleeter-server
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: product-svc-0.1.0
    k8slens-edit-resource-version: v1
  annotations:
    deployment.kubernetes.io/revision: '15'
    meta.helm.sh/release-name: spleeter-server
    meta.helm.sh/release-namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: spleeter-server
      app.kubernetes.io/name: spleeter-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: spleeter-server
        app.kubernetes.io/name: spleeter-server
    spec:
      containers:
        - name: app
          image: >-
            us-central1-docker.pkg.dev/audition-toolkit/spleeter/spleeter:v2.4.3
          command:
            - uvicorn
            - app.main:app
            - '--host=0.0.0.0'
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          # volume mount secret
          volumeMounts:
            - name: spleeter-secret
              mountPath: /key
              readOnly: true 
            - name: model-volume
              mountPath: /model

          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext: {}
      volumes:
        - name: gcs-secret
          secret:
            secretName: spleeter-secret
        - name: model-volume
          persistentVolumeClaim:
            claimName: model-pvc

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: default
      serviceAccount: default
      securityContext: {}
      imagePullSecrets:
        - name: gcr-secret
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

---

apiVersion: v1
kind: Service
metadata:
  name: spleeter-server
  namespace: dev
  
  labels:
    app.kubernetes.io/instance: spleeter-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: spleeter-server
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: product-svc-0.1.0
    k8slens-edit-resource-version: v1
  
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: spleeter-server
    app.kubernetes.io/name: spleeter-server
  type: ClusterIP
  sessionAffinity: None
